feat: add config css

--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contador-Senai</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <main>
         <section>
             <h1>Contador</h1>
             <h2>0</h2>
-            <div>
+            <div id="buttons">
                 <button>Diminuir</button>
-                <button>Zerar</button>
+                <button>Limpar</button>
                 <button>Aumentar</button>
             </div>
         </section>
 
     </main>
 </body>
+<script src="./assets/script.js"></script>
 </html>
